# hermes2d

./: CMakeLists.txt
python/hermes2d/: CMakeLists.txt  plot.py
src/: CMakeLists.txt  linsystem.cpp  mesh.cpp  nonlinsystem.cpp  solution.cpp  weakform.cpp
src/ref_selectors/: h1_nonuniform_hp.cpp
tests/: CMake.common
tests/mesh/convert_quads_to_triangles/: CMakeLists.txt  main.cpp
tests/mesh/convert_triangles_to_quads/: CMakeLists.txt  main.cpp
tests/shapeset/lobatto-linearly-independent-1/: main.cpp
tutorial/22-newton-timedep-heat-adapt/: main.cpp
tutorial/24-newton-timedep-gp-adapt/: main.cpp
